@@ -50,6 +50,19 @@
 # include <stdarg.h>
 #endif
 
+/******************************* OBJECT GOOP ***********************************/
+
+/* Macros to allocate and deallocate memory for an object.  For use only in
+   object constructors/destructors, not in end-user programs. */
+#define SPIF_ALLOC(type)             SPIF_TYPE(type) MALLOC(sizeof SPIF_CONST_TYPE(type))
+#define SPIF_DEALLOC(obj)            FREE(obj)
+
+/* Macros for specifying the classname variables for each class type.  Each subclass of
+   spif_obj_t must define this variable using these macros. */
+#define SPIF_DECL_CNVAR(type)        "!spif_" #type "_t!"
+#define SPIF_DECL_CLASSNAME(type)    spif_classname_t spif_ ## type ## _classname = SPIF_DECL_CNVAR(type)
+
+
 /******************************** MSGS GOOP ***********************************/
 extern char *libast_program_name, *libast_program_version;
 
